# internal/handlers/user_requests.go
@@ -10,6 +10,20 @@ type RegisterRequest struct {
 
 // Запрос на вход
 type LoginRequest struct {
-	Identifier string `json:"identifier"` // может быть phone, email или username
+	Identifier string `json:"identifier"`
 	Password   string `json:"password"`
+}
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
+
+type UserProfileResponse struct {
+	ID         int    `json:"id"`
+	Username   string `json:"username"`
+	Email      string `json:"email"`
+	Phone      string `json:"phone"`
+	Role       string `json:"role"`
+	IsVerified bool   `json:"isVerified"`
+	OwnerID    string `json:"owner_id"`
 }
